# bora-herdr-ada

./: .gitignore  AGENTS.md  BORA.md  CHANGELOG.md  Cargo.toml  NEXT_PROMPT.md  NOTICE  build.rs  clippy.toml  justfile  rust-toolchain.toml
.claude/memory/: session-log.md
.claude/sessions/: .last_inbox_check
.claude/state/: breezing-timeline.jsonl  changed-files.jsonl  instructions-loaded.jsonl  memory-resume-pack.json  runtime-reactive.jsonl  session-events.jsonl  session-skills-used.json  session.events.jsonl  session.json  usage-stats.jsonl
.claude/state/sessions/: session-1783089445510902000.json
.github/workflows/: bora-test.yml  build-artifacts-manual.yml  ci.yml  libghostty-vt-prebuilts.yml  preview.yml  release.yml
.harness-mem/state/: continuity.json
.omp/: INSTALL-LOG.md  RULES.md
docs/next/: CHANGELOG.md
docs/next/api/: herdr-api.schema.json
scripts/: bora  build_libghostty_vt_prebuilt.sh  check_file_size.sh  fetch_libghostty_vt_prebuilt.sh
src/: bora_config.rs  bora_settings.rs  cli.rs  config.rs  events.rs  kitty_graphics.rs  layout.rs  logging.rs  main.rs  pane.rs  popup_size.rs  raw_input.rs  session.rs  ui.rs  update.rs  workspace.rs  worktree.rs
src/api/: mod.rs  schema.rs  server.rs  subscriptions.rs  wait.rs
src/api/schema/: events.rs  github.rs  (+6 more)
src/app/: actions.rs  actions_tests.rs  agents.rs  api.rs  creation.rs  flow.rs  mod.rs  mod_tests.rs  runtime.rs  session.rs  state.rs  terminal_targets.rs  worktrees.rs
src/cli/: agent.rs  api.rs  completion.rs  integration.rs  notification.rs  pane.rs  plugin.rs  server.rs  spec.rs  status.rs  tab.rs  workspace.rs  worktree.rs
src/client/: input.rs  mod.rs
src/config/: io.rs  keybinds.rs  model.rs  sidebar.rs  sound.rs
src/detect/: manifest.rs  mod.rs
src/input/: encode.rs
src/integration/: mod.rs  mod_tests.rs  targets.rs  tests.rs  version.rs
src/pane/: input.rs  osc.rs  terminal.rs
src/persist/: io.rs  restore.rs  snapshot.rs
src/platform/: mod.rs  windows.rs
src/protocol/: wire.rs
src/pty/: actor.rs  fd.rs
src/remote/: unix.rs
src/server/: autodetect.rs  client_transport.rs  clients.rs  headless.rs  headless_tests.rs  notifications.rs
src/terminal/: runtime.rs  state.rs
src/ui/: dialogs.rs  menus.rs  mobile.rs  navigator.rs  onboarding.rs  release_notes.rs  right_panel.rs  settings.rs  sidebar.rs  status.rs  tab_surface.rs
src/workspace/: aggregate.rs  tab.rs
tests/: api_ping.rs  auto_detect.rs  cli_wrapper.rs  client_mode.rs  cross_area.rs  detach_reattach.rs  live_handoff.rs  multi_client.rs  server_headless.rs
tests/cli/: harness.rs  plugins.rs  sessions.rs
tests/support/: mod.rs
website/: install.ps1  install.sh
website/agent-detection/: index.toml  omp.toml
(+41 files in other folders)
