[package]
name = "bora"
version = "0.10.1"
edition = "2021"
build = "build.rs"
description = "terminal workspace manager for AI coding agents"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ogulcancelik/herdr"
homepage = "https://herdr.dev"
keywords = ["terminal", "tui", "ai", "agents", "multiplexer"]
categories = ["command-line-utilities"]
include = [
    "src/**/*",
    "assets/sounds/*",
    "docs/next/api/herdr-api.schema.json",
    "README.md",
    "LICENSE",
    "NOTICE",
    "Cargo.toml",
]

[lints.clippy]
# ── AI anti-pattern prevention ──────────────────────────────
# Lints marked "deny" are clean and enforced — new violations break the build.
# Lints marked "warn" are advisory — visible but not blocking until existing
# violations are cleaned up.  Promote from warn → deny after cleanup.

# Needless allocations — enforced (cleaned).
redundant_clone = "deny"
cloned_instead_of_copied = "deny"
implicit_clone = "deny"

# Correctness — enforced (cleaned).
cast_lossless = "deny"
redundant_closure_for_method_calls = "deny"

# Leftover debug macros — advisory (existing violations in CLI code).
dbg_macro = "warn"
todo = "warn"

# Complexity — advisory (many existing large functions).
cognitive_complexity = { level = "warn", priority = -1 }
too_many_lines = { level = "warn", priority = -1 }

[lints.rust]
unused_must_use = "warn"

[dependencies]
base64 = "0.22.1"
bincode = { version = "2", features = ["serde"] }
bytes = "1"
clap = { version = "4.5", default-features = false, features = ["std"] }
clap_complete = "4.5"
crossterm = "0.29"
ctrlc = "3"
interprocess = "2.4.2"
libc = "0.2"
portable-pty = "=0.9.0"
png = "0.17"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2"
schemars = { version = "1.2.1", features = ["derive"] }

[patch.crates-io]
portable-pty = { path = "vendor/portable-pty" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Wdk_System_Threading",
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
